--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -1,11 +1,8 @@
 /* ---------- VARIABLES ---------- */
-// assets/css/style.scss
+$grey-color: #b0b0b0; // Define the grey color variable
+
 @import "minima";
 
-
-
-
-// ...existing code...
 :root {
   /* Colores principales */
   --color-primary: #2563eb;          /* Azul principal */
