--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,57 +1,54 @@
 <!DOCTYPE html>
-<html lang="{{ site.lang | default: "en-US" }}">
-
+<html lang="{{ site.lang | default: 'en-US' }}">
   <head>
-    <meta charset='utf-8'>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,maximum-scale=2">
-    <link rel="stylesheet" type="text/css" media="screen" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
-    <!-- Place this tag in your head or just before your close body tag. -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="{{ '/assets/css/style.scss?v=' | append: site.github.build_revision | relative_url }}">
     <script async defer src="https://buttons.github.io/buttons.js"></script>
 
-{% seo %}
+    {% seo %}
     {% include head-custom.html %}
   </head>
-
   <body>
-
     <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          {% if site.github.is_project_page %}
-            <a id="forkme_banner" href="{{ site.github.repository_url }}">View on GitHub</a>
-            <!-- Place this tag where you want the button to render. -->
-            <a class="github-button" href="https://github.com/Gradiant/5g-charts" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star Gradiant/5g-charts on GitHub">Star</a>
-          {% endif %}
+    <header id="header_wrap" class="outer">
+      <div class="inner">
+        {% if site.github.is_project_page %}
+          <a id="forkme_banner" href="{{ site.github.repository_url }}">View on GitHub</a>
+          <a class="github-button" href="{{ site.github.repository_url }}" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star {{ site.github.repository_name }} on GitHub">Star</a>
+        {% endif %}
 
-          <h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1>
-          <h2 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h2>
+        <h1 id="project_title">{{ site.title }}</h1>
+        <h2 id="project_tagline">{{ site.description }}</h2>
 
-          {% if site.show_downloads %}
-            <section id="downloads">
-              <a class="zip_download_link" href="{{ site.github.zip_url }}">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="{{ site.github.tar_url }}">Download this project as a tar.gz file</a>
-            </section>
-          {% endif %}
-          {% include nav.html %}
-        </header>
-    </div>
+        {% if site.show_downloads %}
+          <section id="downloads">
+            <a class="zip_download_link" href="{{ site.github.zip_url }}">Download this project as a .zip file</a>
+            <a class="tar_download_link" href="{{ site.github.tar_url }}">Download this project as a tar.gz file</a>
+          </section>
+        {% endif %}
+        {% include nav.html %}
+      </div>
+    </header>
 
     <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
+    <main id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         {{ content }}
       </section>
-    </div>
+    </main>
 
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
+    <!-- FOOTER -->
+    <footer id="footer_wrap" class="outer">
+      <div class="inner">
         {% if site.github.is_project_page %}
-        <p class="copyright">{{ site.title | default: site.github.repository_name }} maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
+          <p class="copyright">
+            {{ site.title }} maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a>
+          </p>
         {% endif %}
         <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
+      </div>
+    </footer>
   </body>
 </html>
