--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,17 +1,13 @@
 <div class="navbar">
-    <a href="{{site.baseurl}}/">Home</a>
-    <div class="dropdown">
-      <button class="dropbtn">Tutorials
-        <i class="fa fa-caret-down"></i>
-      </button>
-      <div class="dropdown-content">
-        <a href="{{site.baseurl}}/open5gs-srsran-5g-zmq.html">Open5GS+srsRAN-5G</a>
-        <a href="{{site.baseurl}}/open5gs-srslte.html">Open5GS+srsLTE</a>
-        <a href="{{site.baseurl}}/open5gs-ueransim-gnb.html">Open5GS+UERANSIM</a>
-        <a href="{{site.baseurl}}/open5gs-packetrusher.html">Open5GS+PacketRusher</a>
-        <a href="{{site.baseurl}}/open5gs-oaignb.html">Open5GS+OAIGNB</a>
-        <a href="{{site.baseurl}}/open5gs-srsenb.html">Open5GS+srsenb</a>
-        <a href="{{site.baseurl}}/open5gs-scp.html">Open5GS with SCP</a>
-      </div>
+  <a href="{{site.baseurl}}/">Home</a>
+  <div class="dropdown">
+    <button class="dropbtn">Tutorials
+      <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+      <a href="{{site.baseurl}}/docs/complete-demo-ueransim.html">Complete Demo UERANSIM</a>
+      <a href="{{site.baseurl}}/docs/installation-options.html">Installation Options</a>
+      <a href="{{site.baseurl}}/docs/simple-deployment.html">Simple Deployment</a>
     </div>
+  </div>
 </div>
