--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
           {% if site.github.is_project_page %}
             <a id="forkme_banner" href="{{ site.github.repository_url }}">View on GitHub</a>
             <!-- Place this tag where you want the button to render. -->
-            <a class="github-button" href="https://github.com/Gradiant/5g-charts" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star Gradiant/5g-charts on GitHub">Star</a>
+            <a class="github-button" href="https://github.com/Gradiant/open5gs-operator" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star Gradiant/open5gs-operator on GitHub">Star</a>
           {% endif %}
 
           <h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1>
@@ -53,5 +53,43 @@
         <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
+    <script>
+      document.addEventListener("DOMContentLoaded", function () {
+          document.querySelectorAll("pre").forEach(preBlock => {
+              let button = document.createElement("button");
+              button.innerText = "Copy";
+              button.classList.add("copy-btn");
+      
+              button.addEventListener("click", function () {
+                  let code = preBlock.querySelector("code").innerText;
+                  navigator.clipboard.writeText(code).then(() => {
+                      button.innerText = "Copied!";
+                      setTimeout(() => { button.innerText = "Copy"; }, 1500);
+                  });
+              });
+      
+              preBlock.style.position = "relative";
+              preBlock.appendChild(button);
+          });
+      });
+      </script>
+    <script>
+      document.addEventListener("DOMContentLoaded", function () {
+          const text = "open5gs-go-operator-1";
+          let index = 0;
+          const speed = 100; // Velocidad de escritura en ms
+          function typeEffect() {
+              if (index < text.length) {
+                  document.getElementById("project_title").textContent += text.charAt(index);
+                  index++;
+                  setTimeout(typeEffect, speed);
+              }
+          }
+          document.getElementById("project_title").textContent = "";
+          typeEffect();
+      });
+      </script>
+                
+      
   </body>
 </html>
