--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -5,9 +5,9 @@
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-      <a href="{{site.baseurl}}/docs/complete-demo-ueransim.html">Complete Demo UERANSIM</a>
-      <a href="{{site.baseurl}}/docs/installation-options.html">Installation Options</a>
-      <a href="{{site.baseurl}}/docs/simple-deployment.html">Simple Deployment</a>
+      <a href="{{site.baseurl}}/docs/installation-options/installation-options.html">Installation Options</a>
+      <a href="{{site.baseurl}}/docs/basic-deployment/basic-deployment.html">Basic Deployment</a>
+      <a href="{{site.baseurl}}/docs/complete-demo-ueransim/complete-demo-ueransim.html">Complete Demo UERANSIM</a>
     </div>
   </div>
 </div>
