--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,7 +2,6 @@
 ---
 
 @import "{{ site.theme }}";
- /* Navbar container */
  .navbar {
     overflow: hidden;
     background-color: rgb(51, 183, 245);
@@ -17,7 +16,6 @@
 
   }
   
-  /* Links inside the navbar */
   .navbar a {
     float: left;
     font-size: 18px;
@@ -28,13 +26,11 @@
     font-weight: bold;
   }
   
-  /* The dropdown container */
   .dropdown {
     float: left;
     overflow: hidden;
   }
   
-  /* Dropdown button */
   .dropdown .dropbtn {
     font-size: 18px;
     font-weight: bold;
@@ -43,16 +39,13 @@
     color: white;
     padding: 14px 16px;
     background-color: inherit;
-    font-family: inherit; /* Important for vertical align on mobile phones */
-    margin: 0; /* Important for vertical align on mobile phones */
-  }
+    font-family: inherit; 
+    margin: 0;
   
-  /* Add a red background color to navbar links on hover */
   .navbar a:hover, .dropdown:hover .dropbtn {
     opacity: 0.8;
   }
   
-  /* Dropdown content (hidden by default) */
   .dropdown-content {
     display: none;
     position: absolute;
@@ -62,7 +55,6 @@
     z-index: 1;
   }
   
-  /* Links inside the dropdown */
   .dropdown-content a {
     float: none;
     color: black;
@@ -72,20 +64,17 @@
     text-align: left;
   }
   
-  /* Add a grey background color to dropdown links on hover */
   .dropdown-content a:hover {
     background-color: #ddd;
   }
   
-  /* Show the dropdown menu on hover */
   .dropdown:hover .dropdown-content {
     display: block;
   } 
-/* Contenedor del bloque de código */
 pre {
-  position: relative; /* Asegura que el botón se posicione relativo al <pre> */
-  background: #f4f4f4; /* Fondo gris claro */
-  color: #4a4a4a; /* Texto gris oscuro */
+  position: relative; 
+  background: #f4f4f4; 
+  color: #4a4a4a; 
   padding: 15px;
   border-radius: 8px;
   overflow-x: auto;
@@ -95,19 +84,17 @@ pre {
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
 }
 
-/* Estilos específicos para <code> dentro de <pre> */
 pre code {
   display: block;
   white-space: pre-wrap;
   word-wrap: break-word;
 }
 
-/* Botón de copiar con mejor posicionamiento */
 .copy-btn {
   position: absolute;
-  top: 0px;  /* Ajusta la distancia desde la parte superior */
-  right: 0px; /* Ajusta la distancia desde el borde derecho */
-  background: #007acc; /* Azul moderno */
+  top: 0px;  
+  right: 0px; 
+  background: #007acc; 
   color: white;
   border: none;
   padding: 5px 10px;
@@ -117,7 +104,7 @@ pre code {
   border-radius: 5px;
   opacity: 0.3;
   transition: background 0.2s, opacity 0.2s;
-  z-index: 12; /* Asegura que no se sobreponga el texto */
+  z-index: 12; 
 }
 
 .copy-btn:hover {
@@ -126,7 +113,6 @@ pre code {
 }
 
 
-/* Estilos para resaltar la sintaxis */
 .token.comment { color: #6a9955; }
 .token.keyword { color: #569cd6; }
 .token.string { color: #ce9178; }
@@ -189,7 +175,7 @@ pre code {
   border-radius: 5px;
   opacity: 0.7;
   transition: background 0.2s, opacity 0.2s;
-  z-index: 12; /* Asegura que no se sobreponga el texto */
+  z-index: 12; 
   display: inline-block;
   padding: 5px 12px;
   text-decoration: none;
