--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,79 +2,82 @@
 ---
 
 @import "{{ site.theme }}";
- .navbar {
-    overflow: hidden;
-    background-color: rgb(51, 183, 245);
-    font-family: Arial;
-    font-weight: bold;
-    border-radius: 8px;
-    padding: 10px;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
 
-  }
-  
-  .navbar a {
-    float: left;
-    font-size: 18px;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-weight: bold;
-  }
-  
-  .dropdown {
-    float: left;
-    overflow: hidden;
-  }
-  
-  .dropdown .dropbtn {
-    font-size: 18px;
-    font-weight: bold;
-    border: none;
-    outline: none;
-    color: white;
-    padding: 14px 16px;
-    background-color: inherit;
-    font-family: inherit; 
-    margin: 0;
-  
-  .navbar a:hover, .dropdown:hover .dropbtn {
-    opacity: 0.8;
-  }
-  
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-  }
-  
-  .dropdown-content a {
-    float: none;
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-  }
-  
-  .dropdown-content a:hover {
-    background-color: #ddd;
-  }
-  
-  .dropdown:hover .dropdown-content {
-    display: block;
-  } 
+.navbar {
+  overflow: hidden;
+  background-color: rgb(51, 183, 245);
+  font-family: Arial;
+  font-weight: bold;
+  border-radius: 8px;
+  padding: 10px;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.navbar a {
+  float: left;
+  font-size: 18px;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.navbar a:hover,
+.dropdown:hover .dropbtn {
+  opacity: 0.8;
+}
+
+.dropdown {
+  float: left;
+  overflow: hidden;
+}
+
+.dropdown .dropbtn {
+  font-size: 18px;
+  font-weight: bold;
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
 pre {
-  position: relative; 
-  background: #f4f4f4; 
-  color: #4a4a4a; 
+  position: relative;
+  background: #f4f4f4;
+  color: #4a4a4a;
   padding: 15px;
   border-radius: 8px;
   overflow-x: auto;
@@ -92,9 +95,9 @@ pre code {
 
 .copy-btn {
   position: absolute;
-  top: 0px;  
-  right: 0px; 
-  background: #007acc; 
+  top: 0px;
+  right: 0px;
+  background: #007acc;
   color: white;
   border: none;
   padding: 5px 10px;
@@ -104,7 +107,7 @@ pre code {
   border-radius: 5px;
   opacity: 0.3;
   transition: background 0.2s, opacity 0.2s;
-  z-index: 12; 
+  z-index: 12;
 }
 
 .copy-btn:hover {
@@ -112,15 +115,11 @@ pre code {
   opacity: 1;
 }
 
-
 .token.comment { color: #6a9955; }
 .token.keyword { color: #569cd6; }
 .token.string { color: #ce9178; }
 .token.function { color: #dcdcaa; }
 .token.number { color: #b5cea8; }
-
-
-
 
 #project_title {
   font-size: 2.8rem;
@@ -175,7 +174,7 @@ pre code {
   border-radius: 5px;
   opacity: 0.7;
   transition: background 0.2s, opacity 0.2s;
-  z-index: 12; 
+  z-index: 12;
   display: inline-block;
   padding: 5px 12px;
   text-decoration: none;
