--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -7,6 +7,7 @@
     <div class="dropdown-content">
       <a href="{{site.baseurl}}/docs/installation-options/installation-options.html">Installation Options</a>
       <a href="{{site.baseurl}}/docs/basic-deployment/basic-deployment.html">Basic Deployment</a>
+      <a href="{{site.baseurl}}/docs/advanced-deployment/advanced-deployment.html">Advanced Deployment</a>
       <a href="{{site.baseurl}}/docs/complete-demo-ueransim/complete-demo-ueransim.html">Complete Demo UERANSIM</a>
     </div>
   </div>
